Comment outed javascript_include_tag to avoid error on cygwin

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Mongoidauth</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "application" if false%><!-- To avoid error on cygwin -->
   <%= csrf_meta_tags %>
 </head>
 <body>
